# openiss-dockerfiles

./: .gitignore  Dockerfile.base  Dockerfile.u20-base  README.md
CUDA/: Dockerfile.base  Dockerfile.deviceQuery  Dockerfile.simpleGL  README.md
ML/: Dockerfile.jupyter-conda  Dockerfile.oi-reid  README.md
OpenGL/: Dockerfile.base  Dockerfile.cubes  Dockerfile.glfw  Dockerfile.skeleton  Dockerfile.triangle  README.md
OpenGL/CubeScene/: CMakeLists.txt  cubes.cpp
OpenGL/GLFWTest/: CMakeLists.txt  glfw_test.cpp
OpenGL/GLFWtest/: CMakeLists.txt  glfw_test.cpp
OpenGL/HelloTriangle/: CMakeLists.txt  triangle.cpp
X11/: Dockerfile.xeyes  README.md
cuda/: Dockerfile.deviceQuery  Dockerfile.simpleGL  README.md
sdkbase/: Dockerfile.openisssdkbase  README  build.sh
